# POLICalendar

./: .gitignore  CMakeLists.txt  Calendar.cpp  Calendar.h  CalendarColumn.cpp  CalendarColumn.h  CalendarColumns.cpp  CalendarColumns.h  CalendarDate.cpp  CalendarDate.h  CalendarEvent.cpp  CalendarEvent.h  CalendarEvents.cpp  CalendarEvents.h  HourVBar.cpp  HourVBar.h  MainWindow.cpp  MainWindow.h  README.md  Task.h  Tasklist.cpp  Tasklist.h  main.cpp
Calendar/: Calendar.cpp  Calendar.h  Calendar.qss  CalendarColumns.cpp  CalendarColumns.h  CalendarEvent.cpp  CalendarEvent.h  CalendarEvents.cpp  CalendarEvents.h  HourVBar.cpp  HourVBar.h  Task.cpp
Controller/: Base64.h  Controller.cpp  Controller.h  IController.h  IcalHandler.cpp  IcalHandler.h  WebClient.cpp  WebClient.h  XMLReader.cpp  XMLReader.h
Login/: Login.cpp  Login.h  Login.ui  mainwindow.cpp  mainwindow.ui
Model/: Event.cpp  Event.h  EventsContainer.cpp  EventsContainer.h  Task.cpp  Task.h
View/: AppStyle.qss  IView.h  MainWindow.cpp  MainWindow.h  resources.qrc
View/Calendar/: Calendar.cpp  Calendar.h  Calendar.qss  CalendarColumns.cpp  CalendarColumns.h  CalendarDate.cpp  CalendarDate.h  CalendarEvent.cpp  CalendarEvent.h  CalendarEvents.cpp  CalendarEvents.h  DialogEdit.cpp  DialogEdit.h  DialogEdit.ui  DialogEvent.cpp  DialogEvent.h  DialogEvent.ui  DialogTask.cpp  DialogTask.h  DialogTask.ui  EventColors.qss  HourVBar.cpp  HourVBar.h  ICalendarGUIEventsHandler.h  ICalendarGUITaskHandler.h  Task.cpp  Task.h  TaskGUI.cpp  TaskGUI.h  TaskGUI.qss  Tasklist.cpp  Tasklist.h
View/Login/: Login.cpp  Login.h  Login.ui
backend/: IcalHandler.cpp  IcalHandler.h  WebClient.cpp  WebClient.h  XMLReader.h  session.cpp  session.h  xmlReader.cpp  xmlReader.h
libical-macos/lib/: libical.3.dylib  libical_cxx.3.0.10.dylib  libicalss.3.dylib  libicalss_cxx.3.dylib
libical-win/include/libical/: ical.h  icalss.h
libical-win/lib/cmake/LibIcal/: LibIcalConfigVersion.cmake  LibIcalTargets.cmake
libical-win/lib/pkgconfig/: libical.pc
libical/include/libical-glib/: i-cal-array.h  i-cal-attach.h  i-cal-comp-iter.h  i-cal-component.h  i-cal-datetimeperiod.h  i-cal-duration.h  i-cal-geo.h  i-cal-parameter.h  i-cal-parser.h  i-cal-period.h  i-cal-property.h  i-cal-recur-iterator.h  i-cal-recurrence.h  i-cal-reqstat.h  i-cal-time-span.h  i-cal-time.h  i-cal-timezone.h  i-cal-trigger.h  i-cal-value.h
libical/lib/: libical-glib.so.3  libical-glib.so.3.0.95  libical.so.3  libical.so.3.0.10  libical.so.3.0.95  libical_cxx.so.3  libical_cxx.so.3.0.10  libical_cxx.so.3.0.95  libicalss.so.3  libicalss.so.3.0.10  libicalss.so.3.0.95  libicalss_cxx.so.3  libicalss_cxx.so.3.0.10  libicalss_cxx.so.3.0.95  libicalvcal.so.3  libicalvcal.so.3.0.10  libicalvcal.so.3.0.95
libical/lib/cmake/LibIcal/: IcalGlibSrcGenerator-noconfig.cmake  IcalGlibSrcGenerator.cmake  (+3 more)
libical/lib/pkgconfig/: libical-glib.pc  libical.pc
libical/libexec/libical/: ical-glib-src-generator
libical/libical-macos/lib/: libical.3.0.10.dylib  libical_cxx.3.dylib  libicalss.3.0.10.dylib  libicalss_cxx.3.0.10.dylib  libicalvcal.3.0.10.dylib  libicalvcal.3.dylib
libical/libical-unix/lib/: libical.so.3.0.10
(+42 files in other folders)
